--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "chalk": "^2.3.2",
     "commander": "^2.15.1",
-    "ecstatic": "git+https://github.com/jfhbrook/node-ecstatic.git",
+    "ecstatic": "4.1.1",
     "express": "^4.16.3",
     "inquirer": "^5.2.0",
     "opn": "^5.3.0",
